fix: make highlighted line more visible

--- a/hlx_statics/styles/prism.css
+++ b/hlx_statics/styles/prism.css
@@ -220,7 +220,7 @@ pre[class*=language-].no-line-numbers {
   right: 0;
   padding: inherit 0;
   margin-top: 2em;
-  background: hsla(24, 20%, 50%, .08);
+  background: hsla(24, 20%, 50%, .16);
   pointer-events: none;
   line-height: inherit;
   white-space: pre
